--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 getrandom = { version = "0.2.10", features = ["js"] }
 wasm-bindgen = "0.2"
+base64 = "0.12"
 image = "0.24.7"
 imageproc = "0.23.0"
 num = "0.4.1"
