WIP: save sending and converting img rust

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+winapi = "0.3"
+wgpu = "0.13.1"
 hex-literal = "0.4.1"
 image = "0.24.7"
 imageproc = "0.23.0"
@@ -15,6 +17,7 @@ sha2 = "0.10.8"
 clap = "3"
 sha3 = "0.10.8"
 md-5 = "0.10.6"
+getrandom = { version = "0.2", features = ["js"] }
 
 openssl = { version = "0.10.62", features = ["vendored"] }
 anstyle = "1.0.7"
