--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.20.2",
     "child_process": "^1.0.2",
     "cryptico": "^1.0.2",
+    "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
